--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "h4cc/wkhtmltopdf-i386": "^0.12.4",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "setasign/fpdi": "^2.6",
+        "smalot/pdfparser": "^2.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
