--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.7",
+        "setasign/fpdi-tcpdf": "^2.0",
         "smalot/pdfparser": "^2.11"
     },
     "require-dev": {
